@@ -15,6 +15,8 @@ git-annex (5.20131231) UNRELEASED; urgency=medium
   * assistant: Ensure that .ssh/config and .ssh/authorized_keys are not
     group or world writable when writing to those files, as that can make
     ssh refuse to use them, if it allows another user to write to them.
+  * addurl, importfeed: Honor annex.diskreserve as long as the size of the
+    url can be checked.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 31 Dec 2013 13:41:18 -0400
 
